if HAVE_GMOCK
  SUBDIRS = test
endif

noinst_LIBRARIES= libcommon.a 

libcommon_a_SOURCES = logger.cxx logger.h \
                      log_file.cxx log_file.h \
                      util.cxx util.h \
                      daemon_process.cxx daemon_process.h \
                      spawn_process.cxx spawn_process.h \
	              timestamp.cxx timestamp.h \
	              circular_buffer.cxx circular_buffer.h \
                      exception.h 
libcommon_a_CXXFLAGS = 
